--- a/org/vivo.org
+++ b/org/vivo.org
@@ -2,7 +2,7 @@
 
 
 
-* pub [4/4]
+* pub [4/5]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE 3a r10809-1...r10810-1
@@ -26,6 +26,18 @@
    CLOSED: [2016-11-11 周五 21:38] SCHEDULED: <2016-11-11 周五>
    - State "DONE"       from "TODO"       [2016-11-11 周五 21:38]
    - State "TODO"       from ""           [2016-11-11 周五 09:42]
+** TODO [#A] AEC 人脸
+   DEADLINE: <2016-12-15 周四>
+   - State "TODO"       from ""           [2016-12-01 周四 15:12]
+   - adbe5f32c9b66f5dea195eabc25a529d532b8121 算法实现
+   - 4f53f1cb79d6741ec297d679f62c319a47ec9f4f 算法实现
+   - [ ] 在 aec_port 里找到人脸信息
+   - [ ] aec_port.h 里边添加定义的结构体
+   - [ ] msg.u 后边添加传入的 void
+   - [ ] 正常前置人脸尺寸范围
+   - [ ] size/weight 可 tune
+   - [ ] [后期] : 前后置分开
+
 ** DONE [#A] 分析 alawb ，输出文档
    CLOSED: [2016-11-15 周二 10:02] DEADLINE: <2016-11-12 周六>
    - State "DONE"       from "TODO"       [2016-11-15 周二 10:02]
@@ -53,10 +65,14 @@
     - State "DONE"       from "TODO"       [2016-11-03 周四 15:43]
     - State "TODO"       from ""           [2016-11-02 周三 17:28]
 
-** PD1616 [19/19] 
+** PD1616 [20/20] 
    SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
+*** DONE 去掉保密外壳
+    CLOSED: [2016-12-02 周五 10:01] DEADLINE: <2016-12-02 周五>
+    - State "DONE"       from "TODO"       [2016-12-02 周五 10:01]
+    - State "TODO"       from ""           [2016-12-01 周四 20:38]
 *** 解决待关闭 [B161026-120] 3800K强闪偏蓝                      :@bug:@量产前必解:
     CLOSED: [2016-10-29 周六 20:13] DEADLINE: <2016-10-29 周六>
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:13]
@@ -202,7 +218,7 @@
  - [X] 祥玉:加规避
 
 
-** PD1617/PD1619 [10/10] 
+** PD1619 [10/10] 
    SCHEDULED: <2016-12-02 周五>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 *** 关闭 [B161023-299] ev_extend                                       :@bug:
@@ -248,6 +264,15 @@
 *** DONE 2016.10.10 给出 golden
 
 
+
+** PD1619LG4 [0/1]
+   SCHEDULED: <2016-12-02 周五>
+
+*** 正在处理 [B161124-678] MWB 效果反了 [0/1]                   :@bug:@量产前必解:
+    SCHEDULED: <2016-12-01 周四>
+    - State "正在处理"   from ""           [2016-12-01 周四 15:11]
+    - [ ] 确认品质接受后发出变更邮件
+
 ** PD1621 [1/1] 
 *** 关闭 [B161018-885] 用例13滤镜                               :@bug:@量产前必解:
     CLOSED: [2016-10-29 周六 20:25] DEADLINE: <2016-10-29 周六>
@@ -256,9 +281,6 @@
     - State "正在处理"   from "TODO"       [2016-10-29 周六 15:11]
     - State "TODO"       from ""           [2016-10-28 周五 11:46]
     - aec_process.c:1983
-
-
-
 ** TD1605(8917) [1/1]
 *** 不做处理 [B161019-587] ev_range                                    :@bug:
     CLOSED: [2016-10-29 周六 15:01]
