--- a/org/slf.org
+++ b/org/slf.org
@@ -1,6 +1,6 @@
 
 
-* priv [20/34]
+* priv [21/34]
   SCHEDULED: <2016-10-19 周三>
   - State "TODO"       from "TODO"       [2016-10-19 周三 09:00]
   她喜欢我
@@ -12,7 +12,7 @@
    CLOSED: [2016-12-01 周四 18:23] DEADLINE: <2016-12-01 周四>
    - State "DONE"       from "TODO"       [2016-12-01 周四 18:23]
    - State "TODO"       from ""           [2016-12-01 周四 12:32]
-** TODO 给 explorer 打 patch
+** TODO [#A] 给 explorer 打 patch
    SCHEDULED: <2016-11-30 周三>
    - State "TODO"       from ""           [2016-11-24 周四 14:29]
 
@@ -194,26 +194,30 @@
    CLOSED: [2016-11-15 周二 10:02] SCHEDULED: <2016-11-11 周五>
    - State "DONE"       from "TODO"       [2016-11-15 周二 10:02]
    - State "TODO"       from ""           [2016-11-11 周五 09:56]
-** TODO 下载歌曲 [0/17]
-   DEADLINE: <2016-10-26 周三>
+** DONE 下载歌曲 [17/17]
+   CLOSED: [2016-12-02 周五 11:33] DEADLINE: <2016-10-26 周三>
+   - State "DONE"       from "TODO"       [2016-12-02 周五 11:33]
    - State "TODO"       from ""           [2016-10-26 周三 09:36]
-   - [ ] 寂寞的鸭子
-   - [ ] 忘不了
-   - [ ] 为你我受冷风吹
-   - [ ] 姐姐妹妹站起来
-   - [ ] 黄昏
-   - [ ] 你知道不知道
-   - [ ] 蓝色雨（温岚）
-   - [ ] 启程
-   - [ ] 相爱十年 邓超，董洁 爱的箴言
-   - [ ] 圣诞结
-   - [ ] 演员
-   - [ ] 后来
-   - [ ] 搁浅
-   - [ ] 吉米来吧
-   - [ ] 你是我心内的一首歌
-   - [ ] 丹顶鹤的故事
-   - [ ] 遇见你的时候所有星星都落到我头上
+   - [X] 寂寞的鸭子
+     - 苏慧伦 的 鸭子?
+   - [X] 忘不了
+   - [X] 为你我受冷风吹
+   - [X] 姐姐妹妹站起来
+   - [X] 黄昏
+   - [X] 你知道不知道
+   - [X] 蓝色雨（温岚）
+   - [X] 启程
+     - 爱情白皮书 范玮琪 ?
+   - [X] 相爱十年 邓超，董洁 爱的箴言
+     - 邓丽君原唱
+   - [X] 圣诞结
+   - [X] 演员
+   - [X] 后来
+   - [X] 搁浅
+   - [X] 吉米来吧
+   - [X] 你是我心内的一首歌
+   - [X] 丹顶鹤的故事
+   - [X] 遇见你的时候所有星星都落到我头上
 ** DONE 上传 tabbar-tweak.el
    - State "DONE"       from "DONE"       [2016-10-19 周三 09:00]
 
