--- a/org/vivo.org
+++ b/org/vivo.org
@@ -2,9 +2,13 @@
 
 
 
-* pub [4/5]
+* pub [5/6]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
+** DONE 充值安奇逻辑客餐卡
+   CLOSED: [2016-12-03 周六 10:03] DEADLINE: <2016-12-05 周一> SCHEDULED: <2016-12-03 周六>
+   - State "DONE"       from "TODO"       [2016-12-03 周六 10:03]
+   - State "TODO"       from ""           [2016-12-02 周五 22:24]
 ** DONE 3a r10809-1...r10810-1
    CLOSED: [2016-10-28 周五 12:07]
    - State "DONE"       from "TODO"       [2016-10-28 周五 12:07]
