--- a/org/vivo.org
+++ b/org/vivo.org
@@ -1,7 +1,3 @@
-
-
-
-
 * pub [5/6]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
@@ -30,7 +26,7 @@
    CLOSED: [2016-11-11 周五 21:38] SCHEDULED: <2016-11-11 周五>
    - State "DONE"       from "TODO"       [2016-11-11 周五 21:38]
    - State "TODO"       from ""           [2016-11-11 周五 09:42]
-** TODO [#A] AEC 人脸 [3/6]
+** TODO [#A] AEC 人脸 [5/7]
    DEADLINE: <2016-12-15 周四>
    - State "TODO"       from ""           [2016-12-01 周四 15:12]
    - adbe5f32c9b66f5dea195eabc25a529d532b8121 算法实现 Sep 23
@@ -45,10 +41,13 @@
      - 添加 AEC_SET_CUSTOM_EVT_MOD 到 aec_core_get_enum_type 里
      - 添加 q3a_custom_data_t 到 aec_core_set_param_type 的 u 里
      - 以上两者对应，传到算法里
-   - [ ] 正常前置人脸尺寸范围
-     - 先做比较两个面积，面积倍数大于 1.414 时，舍弃小脸，小于时插值
+   - [X] 正常前置人脸尺寸范围
+     - 算法里边对人脸 luma 的处理那里已经自动排序过，index=0是最大的人脸
+     - 算法中人脸的大小跟 aec_port 里边不一样，估计做过映射
    - [ ] size/weight 可 tune
    - [ ] [后期] : 前后置分开
+   - [X] 单独记录 patch
+     - 使用 emacs org-mode 输出 LaTeX , 添加 patch 文件，再输出 pdf 
 
 ** DONE [#A] 分析 alawb ，输出文档
    CLOSED: [2016-11-15 周二 10:02] DEADLINE: <2016-11-12 周六>
