--- a/org/vivo.org
+++ b/org/vivo.org
@@ -75,10 +75,13 @@
     - State "DONE"       from "TODO"       [2016-11-03 周四 15:43]
     - State "TODO"       from ""           [2016-11-02 周三 17:28]
 
-** PD1616 [20/20] 
+** PD1616 [20/21] 
    SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
+*** TODO 借 aec porting 手机
+    DEADLINE: <2016-12-12 周一> SCHEDULED: <2016-12-12 周一>
+    - State "TODO"       from ""           [2016-12-11 周日 12:45]
 *** DONE 去掉保密外壳
     CLOSED: [2016-12-02 周五 10:01] DEADLINE: <2016-12-02 周五>
     - State "DONE"       from "TODO"       [2016-12-02 周五 10:01]
@@ -228,9 +231,12 @@
  - [X] 祥玉:加规避
 
 
-** PD1619 [10/10] 
+** PD1619 [10/11] 
    SCHEDULED: <2016-12-02 周五>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
+*** TODO 和品质看闪光灯偏色的问题
+    SCHEDULED: <2016-12-11 周日>
+    - State "TODO"       from ""           [2016-12-11 周日 12:46]
 *** 关闭 [B161023-299] ev_extend                                       :@bug:
     CLOSED: [2016-10-29 周六 15:16]
     - State "关闭"       from "解决待关闭" [2016-10-31 周一 11:36]
