--- a/org/vivo.org
+++ b/org/vivo.org
@@ -80,7 +80,7 @@
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
 *** TODO 借 aec porting 手机
-    DEADLINE: <2016-12-12 周一> SCHEDULED: <2016-12-12 周一>
+    SCHEDULED: <2016-12-20 周二>
     - State "TODO"       from ""           [2016-12-11 周日 12:45]
 *** DONE 去掉保密外壳
     CLOSED: [2016-12-02 周五 10:01] DEADLINE: <2016-12-02 周五>
@@ -284,8 +284,9 @@
 ** PD1619LG4 [1/1]
    SCHEDULED: <2016-12-02 周五>
 
-*** 解决待关闭 [B161124-678] MWB 效果反了 [0/1]                 :@bug:@量产前必解:
+*** 关闭 [B161124-678] MWB 效果反了 [0/1]                       :@bug:@量产前必解:
     CLOSED: [2016-12-02 周五 19:18] SCHEDULED: <2016-12-01 周四>
+    - State "关闭"       from "解决待关闭" [2016-12-12 周一 14:43]
     - State "解决待关闭" from "正在处理"   [2016-12-02 周五 19:18]
     - State "正在处理"   from ""           [2016-12-01 周四 15:11]
     - [ ] 确认品质接受后发出变更邮件
