--- a/org/vivo.org
+++ b/org/vivo.org
@@ -54,13 +54,14 @@
    - State "DONE"       from "TODO"       [2016-11-15 周二 10:02]
    - State "TODO"       from ""           [2016-11-05 周六 18:54]
 
-* 出差长安记得带回去的 [1/5]
+* 出差长安记得带回去的 [1/6]
   SCHEDULED: <2016-10-16 周日>
  - [ ] 台式机 x2
  - [ ] 插板 x1
  - [ ] 充电头 x1
  - [ ] 数据线 x3 （康丽 x1 ）
  - [X] PD1415D PD1415BA
+ - [ ] 三脚架
 
 
 * 项目
