--- a/org/slf.org
+++ b/org/slf.org
@@ -1,6 +1,6 @@
 
 
-* priv [23/34]
+* priv [23/35]
   SCHEDULED: <2016-10-19 周三>
   - State "TODO"       from "TODO"       [2016-10-19 周三 09:00]
   她喜欢我
@@ -8,6 +8,8 @@
   我能反杀
   一直想飞到西安然后坐火车去敦煌
   
+** TODO 替换 +
+   - State "TODO"       from ""           [2016-12-21 周三 11:19]
 ** DONE tmux 时间格式
    CLOSED: [2016-12-01 周四 18:23] DEADLINE: <2016-12-01 周四>
    - State "DONE"       from "TODO"       [2016-12-01 周四 18:23]
