--- a/org/vivo.org
+++ b/org/vivo.org
@@ -54,14 +54,15 @@
    - State "DONE"       from "TODO"       [2016-11-15 周二 10:02]
    - State "TODO"       from ""           [2016-11-05 周六 18:54]
 
-* 出差长安记得带回去的 [1/6]
-  SCHEDULED: <2016-10-16 周日>
- - [ ] 台式机 x2
- - [ ] 插板 x1
- - [ ] 充电头 x1
- - [ ] 数据线 x3 （康丽 x1 ）
+* DONE 出差长安记得带回去的 [6/6]
+  CLOSED: [2016-12-28 周三 21:43] SCHEDULED: <2016-10-16 周日>
+  - State "DONE"       from ""           [2016-12-28 周三 21:43]
+ - [X] 台式机 x1
+ - [X] 插板 x1
+ - [X] 充电头 x1
+ - [X] 数据线 x2 （康丽 x1 ）
  - [X] PD1415D PD1415BA
- - [ ] 三脚架
+ - [X] 三脚架
 
 
 * 项目
@@ -76,8 +77,9 @@
     - State "DONE"       from "TODO"       [2016-11-03 周四 15:43]
     - State "TODO"       from ""           [2016-11-02 周三 17:28]
 
-** PD1616 [21/21] 
-   SCHEDULED: <2016-10-31 周一>
+** DONE PD1616 [21/21] 
+   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: <2016-10-31 周一>
+   - State "DONE"       from ""           [2016-12-28 周三 11:23]
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
 *** DONE 借 aec porting 手机
@@ -233,8 +235,9 @@
  - [X] 祥玉:加规避
 
 
-** PD1619 [11/11] 
-   SCHEDULED: <2016-12-02 周五>
+** DONE PD1619 [11/11] 
+   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: <2016-12-02 周五>
+   - State "DONE"       from ""           [2016-12-28 周三 11:23]
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 *** DONE 和品质看闪光灯偏色的问题
     CLOSED: [2016-12-13 周二 16:58] SCHEDULED: <2016-12-11 周日>g
@@ -284,8 +287,9 @@
 
 
 
-** PD1619LG4 [1/1]
-   SCHEDULED: <2016-12-02 周五>
+** DONE PD1619LG4 [1/1]
+   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: <2016-12-02 周五>
+   - State "DONE"       from ""           [2016-12-28 周三 11:23]
 
 *** 关闭 [B161124-678] MWB 效果反了 [0/1]                       :@bug:@量产前必解:
     CLOSED: [2016-12-02 周五 19:18] SCHEDULED: <2016-12-01 周四>
