--- a/org/slf.org
+++ b/org/slf.org
@@ -27,7 +27,10 @@
     - State "TODO"       from ""           [2016-12-19 周一 16:37]
 *** TODO windows version of XJJ( variable redirect )
     - State "TODO"       from ""           [2016-11-24 周四 14:31]
-*** TODO 生成 binary-code 的方法
+*** DONE 生成 binary-code 的方法
+    CLOSED: [2017-01-09 周一 18:44]
+    - State "DONE"       from "TODO"       [2017-01-09 周一 18:44] \\
+      最终使用 http://www.freebuf.com/articles/system/27122.html 来修改
     - State "TODO"       from "DONE"       [2017-01-05 周四 10:33] \\
       在 vs 里边用 c 来生成
     - 32bit
@@ -35,6 +38,7 @@
       : https://nickharbour.wordpress.com/2010/07/01/writing-shellcode-with-a-c-compiler/
     - 64bit 有兼容 32bit 的方法，但是是用 c++ 写的
       : http://bbs.pediy.com/showthread.php?t=203140
+      : http://www.freebuf.com/articles/system/27122.html
     - State "DONE"       from "TODO"       [2016-12-20 周二 21:55] \\
       32-bit 参考 windows pe 里边的方法直接用 masm 生成即可
       64-bit 使用 nasm 编译，使用 golink 链接生成即可
