--- a/org/vivo.org
+++ b/org/vivo.org
@@ -1,4 +1,10 @@
-* pub [6/7]
+
+#+TAGS: @bug(b)
+#+TAGS: @量产前必解(x)
+#+TAGS: @发单(f)
+#+TODO: TODO(t@/!) 新的(1@/!) 正在处理(2@/!) 重新打开(3@/!) 延后处理(4@/!) | DONE(d@/!) 解决待关闭(5@/!) 不做处理(6@/!) 退回(7@/!) 关闭(8@/!) 转给他人(9@/!)
+
+* pub [6/8]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE 充值安奇逻辑客餐卡
@@ -54,21 +60,13 @@
    CLOSED: [2016-11-15 周二 10:02] DEADLINE: <2016-11-12 周六>
    - State "DONE"       from "TODO"       [2016-11-15 周二 10:02]
    - State "TODO"       from ""           [2016-11-05 周六 18:54]
-
-* DONE 出差长安记得带回去的 [6/6]
-  CLOSED: [2016-12-28 周三 21:43] SCHEDULED: <2016-10-16 周日>
-  - State "DONE"       from ""           [2016-12-28 周三 21:43]
- - [X] 台式机 x1
- - [X] 插板 x1
- - [X] 充电头 x1
- - [X] 数据线 x2 （康丽 x1 ）
- - [X] PD1415D PD1415BA
- - [X] 三脚架
-
+** TODO 手机放行到日本申请                                              :@发单:
+    SCHEDULED: <2017-01-19 周四>
+    - State "TODO"       from ""           [2017-01-18 周三 10:33]
+** TODO 进入深圳六楼工作区域申请                                        :@发单:
+   SCHEDULED: <2017-01-19 周四>
+   - State "TODO"       from ""           [2017-01-18 周三 21:20]
 * 项目
-#+TAGS: @bug(b)
-#+TAGS: @量产前必解(x)
-#+TODO: TODO(t@/!) 新的(1@/!) 正在处理(2@/!) 重新打开(3@/!) 延后处理(4@/!) | DONE(d@/!) 解决待关闭(5@/!) 不做处理(6@/!) 退回(7@/!) 关闭(8@/!) 转给他人(9@/!)
 ** PD1619F_EX[1/1]
 *** DONE PD1619F_EX移植安奇逻辑算法
     CLOSED: [2016-11-03 周四 16:35] SCHEDULED: <2016-11-03 周四>
@@ -317,4 +315,41 @@
     - State "解决待关闭" from "DONE"       [2016-10-29 周六 15:10]
     - State "DONE"       from "TODO"       [2016-10-29 周六 15:01]
     - State "TODO"       from ""           [2016-10-28 周五 12:06]
+* DONE [#A] [2017-01-18 周三]-[2017-01-26 周四]出差长安
+  CLOSED: [2017-01-18 周三 21:16]
+** DONE 进入品质三楼申请                                                :@发单:
+   CLOSED: [2017-01-18 周三 11:01] SCHEDULED: [2017-01-18 周三]
+   - State "DONE"       from "TODO"       [2017-01-18 周三 11:01]
+    - State "TODO"       from ""           [2017-01-18 周三 10:33]
+    : 时间 [2017-01-19 周四]
+    : 金杰 清野
+** DONE 电脑带回深圳放行申请                                            :@发单:
+   CLOSED: [2017-01-18 周三 21:19] SCHEDULED: [2017-01-19 周四]
+   - State "DONE"       from "TODO"       [2017-01-18 周三 21:19]
+    - State "TODO"       from ""           [2017-01-18 周三 10:33]
+** DONE 记得带回去的 [5/5] 
+   CLOSED: [2017-01-18 周三 21:19] SCHEDULED: [2017-01-20 周五]
+   - State "DONE"       from "TODO"       [2017-01-18 周三 21:19]
+  - State "TODO"       from ""           [2017-01-18 周三 10:20]
+  - [X] 充电头
+  - [X] 数据线(安卓x1 苹果x1)
+  - [X] 耳机
+  - [X] 彭作(刘练)电脑
+  - [X] PD1619(费勇超)x2
+
+
+
+
+
+
+
+* DONE 出差长安记得带回去的 [6/6]
+  CLOSED: [2016-12-28 周三 21:43] SCHEDULED: <2016-10-16 周日>
+  - State "DONE"       from ""           [2016-12-28 周三 21:43]
+ - [X] 台式机 x1
+ - [X] 插板 x1
+ - [X] 充电头 x1
+ - [X] 数据线 x2 （康丽 x1 ）
+ - [X] PD1415D PD1415BA
+ - [X] 三脚架
 
