--- a/org/vivo.org
+++ b/org/vivo.org
@@ -4,7 +4,7 @@
 #+TAGS: @发单(f)
 #+TODO: TODO(t@/!) 新的(1@/!) 正在处理(2@/!) 重新打开(3@/!) 延后处理(4@/!) | DONE(d@/!) 解决待关闭(5@/!) 不做处理(6@/!) 退回(7@/!) 关闭(8@/!) 转给他人(9@/!)
 
-* pub [6/8]
+* pub [8/9]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE 充值安奇逻辑客餐卡
@@ -63,9 +63,14 @@
 ** TODO 手机放行到日本申请                                              :@发单:
     SCHEDULED: <2017-01-19 周四>
     - State "TODO"       from ""           [2017-01-18 周三 10:33]
-** TODO 进入深圳六楼工作区域申请                                        :@发单:
-   SCHEDULED: <2017-01-19 周四>
+** DONE 进入深圳六楼工作区域申请                                        :@发单:
+   CLOSED: [2017-01-19 周四 10:00] SCHEDULED: [2017-01-19 周四]
+   - State "DONE"       from "TODO"       [2017-01-19 周四 10:00]
    - State "TODO"       from ""           [2017-01-18 周三 21:20]
+** DONE ROOT 1619                                                       :@发单:
+   CLOSED: [2017-01-19 周四 10:39] SCHEDULED: [2017-01-19 周四]
+   - State "DONE"       from "TODO"       [2017-01-19 周四 10:39]
+   - State "TODO"       from ""           [2017-01-19 周四 09:50]
 * 项目
 ** PD1619F_EX[1/1]
 *** DONE PD1619F_EX移植安奇逻辑算法
