--- a/org/vivo.org
+++ b/org/vivo.org
@@ -4,7 +4,7 @@
 #+TAGS: @发单(f)
 #+TODO: TODO(t@/!) 新的(1@/!) 正在处理(2@/!) 重新打开(3@/!) 延后处理(4@/!) | DONE(d@/!) 解决待关闭(5@/!) 不做处理(6@/!) 退回(7@/!) 关闭(8@/!) 转给他人(9@/!)
 
-* pub [8/9]
+* pub [8/10]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE 充值安奇逻辑客餐卡
@@ -60,6 +60,9 @@
    CLOSED: [2016-11-15 周二 10:02] DEADLINE: <2016-11-12 周六>
    - State "DONE"       from "TODO"       [2016-11-15 周二 10:02]
    - State "TODO"       from ""           [2016-11-05 周六 18:54]
+** TODO 清野的笔记本
+   SCHEDULED: <2017-01-21 周六>
+   - State "TODO"       from ""           [2017-01-21 周六 12:01]
 ** TODO 手机放行到日本申请                                              :@发单:
     SCHEDULED: <2017-01-19 周四>
     - State "TODO"       from ""           [2017-01-18 周三 10:33]
