--- a/org/vivo.org
+++ b/org/vivo.org
@@ -4,7 +4,8 @@
 #+TAGS: @发单(f)
 #+TODO: TODO(t@/!) 新的(1@/!) 正在处理(2@/!) 重新打开(3@/!) 延后处理(4@/!) | DONE(d@/!) 解决待关闭(5@/!) 不做处理(6@/!) 退回(7@/!) 关闭(8@/!) 转给他人(9@/!)
 
-* pub [10/10]
+
+* pub [12/12]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE 充值安奇逻辑客餐卡
@@ -76,6 +77,16 @@
    CLOSED: [2017-01-19 周四 10:39] SCHEDULED: [2017-01-19 周四]
    - State "DONE"       from "TODO"       [2017-01-19 周四 10:39]
    - State "TODO"       from ""           [2017-01-19 周四 09:50]
+** DONE [#A] 充值安奇逻辑客餐卡
+   CLOSED: [2017-02-20 周一 15:33] SCHEDULED: <2017-02-20 周一>
+   - State "DONE"       from "TODO"       [2017-02-20 周一 15:33]
+   - State "TODO"       from ""           [2017-02-20 周一 12:50]
+** DONE [#A] 复现 [B170218-618]【量产前必解】室外进入相机，选择运动防抖模式拍照，照片过曝，详见视频和截图(2/20） :@bug:@量产前必解:
+   CLOSED: [2017-02-20 周一 14:24] SCHEDULED: <2017-02-20 周一>
+   - State "DONE"       from "TODO"       [2017-02-20 周一 14:24] \\
+     找李思复现，下午两点拍信息部门口阴影处的草丛复现
+   - State "TODO"       from ""           [2017-02-20 周一 12:50]
+     
 * 项目
 ** PD1619F_EX[1/1]
 *** DONE PD1619F_EX移植安奇逻辑算法
@@ -85,8 +96,8 @@
     - State "DONE"       from "TODO"       [2016-11-03 周四 15:43]
     - State "TODO"       from ""           [2016-11-02 周三 17:28]
 
-** DONE PD1616 [21/21] 
-   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: <2016-10-31 周一>
+** PD1616 [21/21] 
+   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: [2016-10-31 周一]
    - State "DONE"       from ""           [2016-12-28 周三 11:23]
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
@@ -208,8 +219,6 @@
     - State "解决待关闭" from "DONE"       [2016-10-29 周六 15:19]
  - 同 B161010-854 已做规避
 
-
-   
 ** PD1616LG4 [2/2] 
 *** 关闭 [B160922-269] 像面色彩均匀度 [1/1]                            :@bug:
     - State "关闭"       from "DONE"       [2016-10-29 周六 15:19]
@@ -242,9 +251,8 @@
  - [X] 求明:3a段错误
  - [X] 祥玉:加规避
 
-
-** DONE PD1619 [11/11] 
-   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: <2016-12-02 周五>
+** PD1619 [11/11] 
+   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: [2016-12-02 周五]
    - State "DONE"       from ""           [2016-12-28 周三 11:23]
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 *** DONE 和品质看闪光灯偏色的问题
@@ -293,10 +301,8 @@
    - [X]  mcas
 *** DONE 2016.10.10 给出 golden
 
-
-
-** DONE PD1619LG4 [1/1]
-   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: <2016-12-02 周五>
+** PD1619LG4 [1/1]
+   CLOSED: [2016-12-28 周三 11:23] SCHEDULED: [2016-12-02 周五]
    - State "DONE"       from ""           [2016-12-28 周三 11:23]
 
 *** 关闭 [B161124-678] MWB 效果反了 [0/1]                       :@bug:@量产前必解:
@@ -325,6 +331,57 @@
     - State "解决待关闭" from "DONE"       [2016-10-29 周六 15:10]
     - State "DONE"       from "TODO"       [2016-10-29 周六 15:01]
     - State "TODO"       from ""           [2016-10-28 周五 12:06]
+** PD1635 [5/8]
+*** TODO 前置第一版问题点 [0/5]
+    - State "TODO"       from ""           [2017-02-18 周六 11:11]
+**** TODO [B170220-245]前置：各场景基础及美颜拍照，整体偏黄绿          :@bug:
+     SCHEDULED: <2017-02-18 周六> 
+     - State "TODO"       from ""           [2017-02-18 周六 11:12]
+**** TODO [B170220-264]前置：办公室环境基础及美颜拍照golden/limit 一致性——办公室环境 golden（7）limit（7） :@bug:
+     SCHEDULED: <2017-02-18 周六> 
+     - State "TODO"       from ""           [2017-02-18 周六 11:12]
+**** TODO [B170220-280]前置：上下唇色色彩差异大——单色背景人物、灯室人物、烛光人物、室外美颜人物 :@bug:
+     SCHEDULED: <2017-02-18 周六> 
+     - State "TODO"       from ""           [2017-02-18 周六 11:12]
+**** TODO [B170220-283]前置：中低色温人脸色块明显，肤色均匀性差——对应烛光、灯室、模拟KFC、KFC等场景 :@bug:
+     SCHEDULED: <2017-02-18 周六> 
+     - State "TODO"       from ""           [2017-02-18 周六 11:13]
+**** TODO [B170220-299]前置：模拟卖场/卖场（高色温场景），人脸色块明显 :@bug:
+     SCHEDULED: <2017-02-18 周六> 
+     - State "TODO"       from ""           [2017-02-18 周六 11:13]
+*** DONE 确认dsp合成前后raw的差异
+    CLOSED: [2017-02-21 周二 15:57] SCHEDULED: <2017-02-18 周六>
+    - State "DONE"       from "TODO"       [2017-02-21 周二 15:57] \\
+      4张 ais 6张优选 不出raw退出再进
+    - State "TODO"       from ""           [2017-02-21 周二 09:40]
+*** TODO 提供前置偏差大的 limit 模组
+    SCHEDULED: <2017-02-20 周一>
+    - State "TODO"       from ""           [2017-02-20 周一 12:17]
+*** TODO 提供后置偏差大的 limit 模组
+    SCHEDULED: <2017-02-20 周一>
+    - State "TODO"       from ""           [2017-02-20 周一 12:17]
+*** DONE 1619 后置 拍 raw 数量问题 0/1/4/6
+    CLOSED: [2017-02-22 周三 10:01] SCHEDULED: <2017-02-18 周六>
+    - State "DONE"       from "TODO"       [2017-02-22 周三 10:01] \\
+      0 - 退出再进重拍
+      1 - 正常
+      4 - 跑到了AIS里边
+      6 - 没有关闭优选功能
+    - State "TODO"       from ""           [2017-02-20 周一 12:19]
+*** DONE [#A] 1619 前置亮环境不能拍 raw -> remosaic 导致
+    CLOSED: [2017-02-20 周一 14:23] SCHEDULED: <2017-02-20 周一>
+    - State "DONE"       from "TODO"       [2017-02-20 周一 14:23]
+    - State "TODO"       from ""           [2017-02-20 周一 12:46]
+    - 关闭方法 adb shell setprop camera.upscale 1
+*** DONE 1635 前置 otp 数据 -> 李兵
+    CLOSED: [2017-02-21 周二 15:58] SCHEDULED: <2017-02-20 周一>
+    - State "DONE"       from "TODO"       [2017-02-21 周二 15:58]
+    - State "TODO"       from ""           [2017-02-20 周一 12:47]
+*** DONE 1635 后置 otp 数据 -> 赖有攀
+    CLOSED: [2017-02-21 周二 15:58] SCHEDULED: <2017-02-20 周一>
+    - State "DONE"       from "TODO"       [2017-02-21 周二 15:58]
+    - State "TODO"       from ""           [2017-02-20 周一 12:48]
+
 * DONE [#A] [2017-01-18 周三]-[2017-01-26 周四]出差长安
   CLOSED: [2017-01-18 周三 21:16]
 ** DONE 进入品质三楼申请                                                :@发单:
@@ -346,8 +403,6 @@
   - [X] 耳机
   - [X] 彭作(刘练)电脑
   - [X] PD1619(费勇超)x2
-
-
 
 
 
