--- a/org/vivo.org
+++ b/org/vivo.org
@@ -365,55 +365,56 @@
      CLOSED: [2017-03-06 周一 16:25] SCHEDULED: <2017-02-18 周六> 
      - State "解决待关闭" from "TODO"       [2017-03-06 周一 16:25]
      - State "TODO"       from ""           [2017-02-18 周六 11:13]
-*** TODO 前置第二版问题点 [0/15]
+*** TODO 前置第二版问题点 [0/16]
     - State "TODO"       from ""           [2017-03-06 周一 18:07]
-**** TODO [B170306-536] 前置基础拍照：中低色温（2500K-2800K-3400K-3800K）饱和度偏高，人物肤色偏紫 :@bug:
+**** 新的 [B170306-536] 前置基础拍照：中低色温（2500K-2800K-3400K-3800K）饱和度偏高，人物肤色偏紫 :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-538] 前置基础拍照：5000K人物肤色偏黄                :@bug:
+**** 新的 [B170306-538] 前置基础拍照：5000K人物肤色偏黄                :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-542] 前置基础拍照：羊皮吊灯人物嘴唇偏紫             :@bug:
+**** 新的 [B170306-542] 前置基础拍照：羊皮吊灯人物嘴唇偏紫             :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-543] 前置基础拍照：模拟KFC及KFC人物肤色偏紫，真功夫人物肤色稍偏紫 :@bug:
+**** 新的 [B170306-543] 前置基础拍照：模拟KFC及KFC人物肤色偏紫，真功夫人物肤色稍偏紫 :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-548] 前置基础拍照：模拟卖场及一号门卖场人物肤色偏黄问题 :@bug:
+**** 新的 [B170306-548] 前置基础拍照：模拟卖场及一号门卖场人物肤色偏黄问题 :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-560] 前置基础拍照：办公室人物整体稍偏黄             :@bug:
+**** 新的 [B170306-560] 前置基础拍照：办公室人物整体稍偏黄             :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-553] 前置基础拍照：自助餐厅人物肤色偏紫             :@bug:
+**** 新的 [B170306-553] 前置基础拍照：自助餐厅人物肤色偏紫             :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-562] 前置基础拍照：室内黑色背景人物肤色偏红         :@bug:
+**** 新的 [B170306-562] 前置基础拍照：室内黑色背景人物肤色偏红         :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-569] 前置基础拍照：室外阴天上下午人物肤色饱和度稍高，人脸不够光泽，整体稍偏灰黄 :@bug:
+**** 新的 [B170306-569] 前置基础拍照：室外阴天上下午人物肤色饱和度稍高，人脸不够光泽，整体稍偏灰黄 :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-570] 前置基础拍照：IQ楼道人物肤色偏紫               :@bug:
+**** 新的 [B170306-570] 前置基础拍照：IQ楼道人物肤色偏紫               :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-571] 前置基础拍照：日出/日落/早上人物肤色偏黄       :@bug:
+**** 新的 [B170306-571] 前置基础拍照：日出/日落/早上人物肤色偏黄       :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-572] 前置基础拍照：商场内灯光广告牌背景人物人脸偏暗、肤色偏黄 :@bug:
+**** 新的 [B170306-572] 前置基础拍照：商场内灯光广告牌背景人物人脸偏暗、肤色偏黄 :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-576] 前置基础拍照：商场内蓝色背景人物肤色偏黄       :@bug:
+**** 新的 [B170306-576] 前置基础拍照：商场内蓝色背景人物肤色偏黄       :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-578] 前置基础拍照：商场内人物饱和度整体稍偏高       :@bug:
+**** 新的 [B170306-578] 前置基础拍照：商场内人物饱和度整体稍偏高       :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-581] 前置基础拍照：夜景人物饱和度偏高及色斑问题     :@bug:
+**** 新的 [B170306-581] 前置基础拍照：夜景人物饱和度偏高及色斑问题     :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** TODO [B170306-610] 前置基础拍照：室内绿色背景人物肤色偏灰、无血色，嘴唇偏紫 :@bug:
+**** 新的 [B170306-610] 前置基础拍照：室内绿色背景人物肤色偏灰、无血色，嘴唇偏紫 :@bug:
      SCHEDULED: <2017-03-06 周一>
+     - State "新的"       from "TODO"       [2017-03-07 周二 11:46]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
 *** DONE 确认dsp合成前后raw的差异
     CLOSED: [2017-02-21 周二 15:57] SCHEDULED: <2017-02-18 周六>
