--- a/org/vivo.org
+++ b/org/vivo.org
@@ -365,7 +365,7 @@
      CLOSED: [2017-03-06 周一 16:25] SCHEDULED: <2017-02-18 周六> 
      - State "解决待关闭" from "TODO"       [2017-03-06 周一 16:25]
      - State "TODO"       from ""           [2017-02-18 周六 11:13]
-*** TODO 前置第二版问题点 [0/16]
+*** TODO 前置第二版问题点 [0/21]
     - State "TODO"       from ""           [2017-03-06 周一 18:07]
 **** 新的 [B170306-536] 前置基础拍照：中低色温（2500K-2800K-3400K-3800K）饱和度偏高，人物肤色偏紫 :@bug:
      SCHEDULED: <2017-03-06 周一>
@@ -416,6 +416,18 @@
      SCHEDULED: <2017-03-06 周一>
      - State "新的"       from "TODO"       [2017-03-07 周二 11:46]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
+**** 新的 [B170306-585] 前置预览问题：进入相机前置（或拍照与美颜切换）AWB收敛慢
+     SCHEDULED: <2017-03-08 周三>
+     - State "新的"       from ""           [2017-03-08 周三 10:28]
+**** 正在处理 [B170221-440] 前置：【电脑屏上效果】QQ 微信室内外正常/稍暗/暗环境拍照、小视频人物肤色偏黄；（QQ暗环境人物背景稍偏蓝） :@bug:
+     SCHEDULED: <2017-03-08 周三>
+     - State "正在处理"   from ""           [2017-03-08 周三 10:29]
+**** 新的 [B170307-178] 前置：QQ 微信室内正常/稍暗/暗环境进相机/视频通话对着人物有AWB跳变； :@bug:
+     SCHEDULED: <2017-03-08 周三>
+     - State "新的"       from ""           [2017-03-08 周三 10:30]
+**** 新的 [B170307-206] 前置：微信小视频录制时放大后人物肤色跳变；     :@bug:
+     SCHEDULED: <2017-03-08 周三>
+     - State "新的"       from ""           [2017-03-08 周三 10:30]
 *** DONE 确认dsp合成前后raw的差异
     CLOSED: [2017-02-21 周二 15:57] SCHEDULED: <2017-02-18 周六>
     - State "DONE"       from "TODO"       [2017-02-21 周二 15:57] \\
