--- a/org/vivo.org
+++ b/org/vivo.org
@@ -5,11 +5,12 @@
 #+TODO: TODO(t@/!) 新的(1@/!) 正在处理(2@/!) 重新打开(3@/!) 延后处理(4@/!) | DONE(d@/!) 解决待关闭(5@/!) 不做处理(6@/!) 退回(7@/!) 关闭(8@/!) 转给他人(9@/!)
 
 
-* pub [13/14]
+* pub [14/14]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
-** TODO [#A] 问王青芸关于住房的事 -> 刘顺顺
-   SCHEDULED: <2017-03-01 周三>
+** DONE [#A] 问王青芸关于住房的事 -> 刘顺顺
+   CLOSED: [2017-03-14 周二 19:57] SCHEDULED: <2017-03-01 周三>
+   - State "DONE"       from "TODO"       [2017-03-14 周二 19:57]
    - State "TODO"       from ""           [2017-03-01 周三 11:47]
 ** DONE [#A] 收集AWB问题
    CLOSED: [2017-03-06 周一 11:57] SCHEDULED: <2017-03-01 周三>
@@ -338,76 +339,86 @@
     - State "解决待关闭" from "DONE"       [2016-10-29 周六 15:10]
     - State "DONE"       from "TODO"       [2016-10-29 周六 15:01]
     - State "TODO"       from ""           [2016-10-28 周五 12:06]
-** PD1635 [13/18]
+** PD1635 [15/18]
 *** DONE 提供后置闪光灯 data sheet -> 丘志平
     CLOSED: [2017-03-06 周一 11:47] SCHEDULED: <2017-03-04 周六>
     - State "DONE"       from "TODO"       [2017-03-06 周一 11:47]
     - State "TODO"       from ""           [2017-03-04 周六 16:51]
-*** TODO 前置第一版问题点 [2/5]
+*** TODO 前置第一版问题点 [5/5]
     - State "TODO"       from ""           [2017-02-18 周六 11:11]
 **** 解决待关闭 [B170220-245]前置：各场景基础及美颜拍照，整体偏黄绿    :@bug:
      CLOSED: [2017-03-06 周一 16:26] SCHEDULED: <2017-02-18 周六> 
      - State "解决待关闭" from "TODO"       [2017-03-06 周一 16:26]
      - State "TODO"       from ""           [2017-02-18 周六 11:12]
-**** 正在处理 [B170220-264]前置：办公室环境基础及美颜拍照golden/limit 一致性——办公室环境 golden（7）limit（7） :@bug:
-     SCHEDULED: <2017-02-18 周六> 
+**** 解决待关闭 [B170220-264]前置：办公室环境基础及美颜拍照golden/limit 一致性——办公室环境 golden（7）limit（7） :@bug:
+     CLOSED: [2017-03-21 周二 09:56] SCHEDULED: <2017-02-18 周六> 
+     - State "解决待关闭" from "正在处理"   [2017-03-21 周二 09:56]
      - State "正在处理"   from "TODO"       [2017-03-06 周一 16:28]
      - State "TODO"       from ""           [2017-02-18 周六 11:12]
-**** 正在处理 [B170220-280]前置：上下唇色色彩差异大——单色背景人物、灯室人物、烛光人物、室外美颜人物 :@bug:
-     SCHEDULED: <2017-02-18 周六> 
+**** 解决待关闭 [B170220-280]前置：上下唇色色彩差异大——单色背景人物、灯室人物、烛光人物、室外美颜人物 :@bug:
+     CLOSED: [2017-03-21 周二 09:56] SCHEDULED: <2017-02-18 周六> 
+     - State "解决待关闭" from "正在处理"   [2017-03-21 周二 09:56]
      - State "正在处理"   from "TODO"       [2017-03-06 周一 16:28]
      - State "TODO"       from ""           [2017-02-18 周六 11:12]
-**** 正在处理 [B170220-283]前置：中低色温人脸色块明显，肤色均匀性差——对应烛光、灯室、模拟KFC、KFC等场景 :@bug:
-     SCHEDULED: <2017-02-18 周六> 
+**** 解决待关闭 [B170220-283]前置：中低色温人脸色块明显，肤色均匀性差——对应烛光、灯室、模拟KFC、KFC等场景 :@bug:
+     CLOSED: [2017-03-21 周二 09:57] SCHEDULED: <2017-02-18 周六> 
+     - State "正在处理"   from "解决待关闭" [2017-03-21 周二 09:56]
+     - State "解决待关闭" from "正在处理"   [2017-03-21 周二 09:56]
      - State "正在处理"   from "TODO"       [2017-03-06 周一 16:28]
      - State "TODO"       from ""           [2017-02-18 周六 11:13]
 **** 解决待关闭 [B170220-299]前置：模拟卖场/卖场（高色温场景），人脸色块明显 :@bug:
      CLOSED: [2017-03-06 周一 16:25] SCHEDULED: <2017-02-18 周六> 
      - State "解决待关闭" from "TODO"       [2017-03-06 周一 16:25]
      - State "TODO"       from ""           [2017-02-18 周六 11:13]
-*** TODO 前置第二版问题点 [0/21]
+*** TODO 前置第二版问题点 [14/20]
     - State "TODO"       from ""           [2017-03-06 周一 18:07]
-**** 新的 [B170306-536] 前置基础拍照：中低色温（2500K-2800K-3400K-3800K）饱和度偏高，人物肤色偏紫 :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-536] 前置基础拍照：中低色温（2500K-2800K-3400K-3800K）饱和度偏高，人物肤色偏紫 :@bug:
+     CLOSED: [2017-03-21 周二 09:57] SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-538] 前置基础拍照：5000K人物肤色偏黄                :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-538] 前置基础拍照：5000K人物肤色偏黄          :@bug:
+     CLOSED: [2017-03-21 周二 09:57] SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-542] 前置基础拍照：羊皮吊灯人物嘴唇偏紫             :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-542] 前置基础拍照：羊皮吊灯人物嘴唇偏紫       :@bug:
+     CLOSED: [2017-03-21 周二 09:57] SCHEDULED: <2017-03-06 周一>
+     - State "解决待关闭" from "新的"       [2017-03-21 周二 09:57]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-543] 前置基础拍照：模拟KFC及KFC人物肤色偏紫，真功夫人物肤色稍偏紫 :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-543] 前置基础拍照：模拟KFC及KFC人物肤色偏紫，真功夫人物肤色稍偏紫 :@bug:
+     CLOSED: [2017-03-21 周二 09:57] SCHEDULED: <2017-03-06 周一>
+     - State "解决待关闭" from "新的"       [2017-03-21 周二 09:57]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-548] 前置基础拍照：模拟卖场及一号门卖场人物肤色偏黄问题 :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-548] 前置基础拍照：模拟卖场及一号门卖场人物肤色偏黄问题 :@bug:
+     CLOSED: [2017-03-21 周二 09:58] SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-560] 前置基础拍照：办公室人物整体稍偏黄             :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-560] 前置基础拍照：办公室人物整体稍偏黄       :@bug:
+     CLOSED: [2017-03-21 周二 09:58] SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-553] 前置基础拍照：自助餐厅人物肤色偏紫             :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-553] 前置基础拍照：自助餐厅人物肤色偏紫       :@bug:
+     CLOSED: [2017-03-21 周二 09:58] SCHEDULED: <2017-03-06 周一>
+     - State "解决待关闭" from "新的"       [2017-03-21 周二 09:58]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
 **** 新的 [B170306-562] 前置基础拍照：室内黑色背景人物肤色偏红         :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-569] 前置基础拍照：室外阴天上下午人物肤色饱和度稍高，人脸不够光泽，整体稍偏灰黄 :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-569] 前置基础拍照：室外阴天上下午人物肤色饱和度稍高，人脸不够光泽，整体稍偏灰黄 :@bug:
+     CLOSED: [2017-03-21 周二 09:58] SCHEDULED: <2017-03-06 周一>
+     - State "解决待关闭" from "新的"       [2017-03-21 周二 09:58]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-570] 前置基础拍照：IQ楼道人物肤色偏紫               :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-570] 前置基础拍照：IQ楼道人物肤色偏紫         :@bug:
+     CLOSED: [2017-03-21 周二 09:58] SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-571] 前置基础拍照：日出/日落/早上人物肤色偏黄       :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-571] 前置基础拍照：日出/日落/早上人物肤色偏黄 :@bug:
+     CLOSED: [2017-03-21 周二 09:59] SCHEDULED: <2017-03-06 周一>
+     - State "解决待关闭" from "新的"       [2017-03-21 周二 09:59]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
 **** 新的 [B170306-572] 前置基础拍照：商场内灯光广告牌背景人物人脸偏暗、肤色偏黄 :@bug:
      SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-576] 前置基础拍照：商场内蓝色背景人物肤色偏黄       :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-576] 前置基础拍照：商场内蓝色背景人物肤色偏黄 :@bug:
+     CLOSED: [2017-03-21 周二 10:00] SCHEDULED: <2017-03-06 周一>
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-578] 前置基础拍照：商场内人物饱和度整体稍偏高       :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 解决待关闭 [B170306-578] 前置基础拍照：商场内人物饱和度整体稍偏高 :@bug:
+     CLOSED: [2017-03-21 周二 10:00] SCHEDULED: <2017-03-06 周一>
+     - State "解决待关闭" from "新的"       [2017-03-21 周二 10:00]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
 **** 新的 [B170306-581] 前置基础拍照：夜景人物饱和度偏高及色斑问题     :@bug:
      SCHEDULED: <2017-03-06 周一>
@@ -419,11 +430,12 @@
 **** 新的 [B170306-585] 前置预览问题：进入相机前置（或拍照与美颜切换）AWB收敛慢
      SCHEDULED: <2017-03-08 周三>
      - State "新的"       from ""           [2017-03-08 周三 10:28]
-**** 正在处理 [B170221-440] 前置：【电脑屏上效果】QQ 微信室内外正常/稍暗/暗环境拍照、小视频人物肤色偏黄；（QQ暗环境人物背景稍偏蓝） :@bug:
-     SCHEDULED: <2017-03-08 周三>
+**** 解决待关闭 [B170221-440] 前置：【电脑屏上效果】QQ 微信室内外正常/稍暗/暗环境拍照、小视频人物肤色偏黄；（QQ暗环境人物背景稍偏蓝） :@bug:
+     CLOSED: [2017-03-21 周二 10:06] SCHEDULED: <2017-03-08 周三>
      - State "正在处理"   from ""           [2017-03-08 周三 10:29]
-**** 新的 [B170307-178] 前置：QQ 微信室内正常/稍暗/暗环境进相机/视频通话对着人物有AWB跳变； :@bug:
-     SCHEDULED: <2017-03-08 周三>
+**** 解决待关闭 [B170307-178] 前置：QQ 微信室内正常/稍暗/暗环境进相机/视频通话对着人物有AWB跳变； :@bug:
+     CLOSED: [2017-03-21 周二 10:06] SCHEDULED: <2017-03-08 周三>
+     - State "解决待关闭" from "新的"       [2017-03-21 周二 10:06]
      - State "新的"       from ""           [2017-03-08 周三 10:30]
 **** 新的 [B170307-206] 前置：微信小视频录制时放大后人物肤色跳变；     :@bug:
      SCHEDULED: <2017-03-08 周三>
@@ -433,8 +445,8 @@
     - State "DONE"       from "TODO"       [2017-02-21 周二 15:57] \\
       4张 ais 6张优选 不出raw退出再进
     - State "TODO"       from ""           [2017-02-21 周二 09:40]
-*** TODO 提供前置偏差大的 limit 模组
-    SCHEDULED: <2017-02-20 周一>
+*** 解决待关闭 提供前置偏差大的 limit 模组
+    CLOSED: [2017-03-21 周二 09:56] SCHEDULED: <2017-02-20 周一>
     - State "TODO"       from ""           [2017-02-20 周一 12:17]
 *** DONE [#A] 优化 hal 调用 mcas 的代码
     CLOSED: [2017-03-03 周五 14:59] SCHEDULED: <2017-03-01 周三>
@@ -464,8 +476,8 @@
     CLOSED: [2017-02-28 周二 16:07] SCHEDULED: <2017-02-28 周二>
     - State "DONE"       from "TODO"       [2017-02-28 周二 16:07]
     - State "TODO"       from ""           [2017-02-28 周二 12:10]
-*** TODO 前置补光灯校准通路
-    SCHEDULED: <2017-02-28 周二>
+*** DONE 前置补光灯校准通路
+    CLOSED: [2017-03-15 周三 09:13] SCHEDULED: <2017-02-28 周二>
     - State "TODO"       from ""           [2017-02-28 周二 10:25]
 *** TODO 提供后置偏差大的 limit 模组
     SCHEDULED: <2017-02-20 周一>
